Tiny improvement to note functionality

--- a/views/partials/posts_v2.handlebars
+++ b/views/partials/posts_v2.handlebars
@@ -87,7 +87,7 @@
             {{#if ../loggedIn}}
               {{#if ../canReply}}
                 <div class="toolbar-button-container">
-                  <button type="button" class="button post-toolbar-button edit-plus {{#if this.havePlused}}have-plused{{/if}} tooltip-top" data-post-id="{{this._id}}" data-tooltip="Note this post">
+                  <button type="button" class="button post-toolbar-button edit-plus {{#if this.havePlused}}have-plused{{/if}} tooltip-top" data-post-id="{{this._id}}" data-tooltip="{{#if this.havePlused}}Remove note from{{else}}Note{{/if}} this post">
                       <i class="plus-icon {{#if this.havePlused}}fas{{else}}far{{/if}} fa-plus-circle"></i> <span class="pluses-number">{{#if this.numberOfPluses}}{{this.numberOfPluses}}{{/if}}</span>
                     </button>
                 </div>
