--- a/views/partials/usersidebar.handlebars
+++ b/views/partials/usersidebar.handlebars
@@ -1,3 +1,4 @@
+<div class="user-sidebar-container">
 {{#if isOwnProfile}}
 <div class="row mb-3">
   <div class="col-6 d-flex">
@@ -158,3 +159,4 @@
   </div>
 </div>
 {{/unless}} {{! End unless is own profile}}
+</div>
