Plus icon change

--- a/views/partials/posts_v2.handlebars
+++ b/views/partials/posts_v2.handlebars
@@ -88,7 +88,7 @@
               {{#if ../canReply}}
                 <div class="toolbar-button-container">
                   <button type="button" class="button post-toolbar-button edit-plus {{#if this.havePlused}}have-plused{{/if}} tooltip-top" data-post-id="{{this._id}}" data-tooltip="{{#if this.havePlused}}Unsupport{{else}}Support{{/if}} this post">
-                      <i class="plus-icon {{#if this.havePlused}}fas{{else}}far{{/if}} fa-plus-circle"></i> <span class="pluses-number">{{#if this.numberOfPluses}}{{this.numberOfPluses}}{{/if}}</span>
+                      <i class="plus-icon {{#if this.havePlused}}fas{{else}}far{{/if}} fa-hands-helping"></i> <span class="pluses-number">{{#if this.numberOfPluses}}{{this.numberOfPluses}}{{/if}}</span>
                     </button>
                 </div>
               {{/if}}
